# tsp

./: .gitignore  CMakeLists.txt  README.md  approximate_original_solver_k21.csv  compile.sh  generate_graph.sh  main.cpp  moscow_approximate_original_solver_k21.csv  moscow_random_permutation_solver.csv  moscow_random_union_solver.csv  moscow_tree_max_path_solver.csv  original_solver_approximation_k21.csv  original_solver_approximation_k5.csv  project.ipynb  random_permutation_solver.csv  random_union.csv  random_union_solver.csv  run.sh  test.sh  tree_max_path.csv  wiki_approximate_original_solver_k21.csv  wiki_random_permutation_solver.csv  wiki_random_union_solver.csv  wiki_tree_max_path_solver.csv
generator/: graph_generator.cpp
solvers/: approximate_original_solver.cpp  approximate_original_solver.h  graph_characteristics_calculator.cpp  graph_characteristics_calculator.h  original_solver.cpp  original_solver.h  path_solver.h  random_permutation.cpp  random_permutation.h  random_union.cpp  random_union.h  tree_max_path.cpp  tree_max_path.h  tsp_solver.h
tests/: solver.cpp  solver.h
utils/: delete_repeats.h  graph.cpp  graph.h  input_output.cpp  input_output.h  random.cpp  random.h
